hphp/hack/test/typecheck/higher_kinded_types/simple_kinds_class.php.exp
File "simple_kinds_class.php", line 9, characters 18-27:
Wrong number of type arguments (expected 2, got 1) (Typing[4101])
  File "simple_kinds_class.php", line 5, characters 7-11:
  Definition is here
File "simple_kinds_class.php", line 11, characters 18-39:
Wrong number of type arguments (expected 2, got 3) (Typing[4101])
  File "simple_kinds_class.php", line 5, characters 7-11:
  Definition is here
File "simple_kinds_class.php", line 17, characters 18-22:
Wrong number of type arguments (expected 1, got 0) (Typing[4101])
  File "simple_kinds_class.php", line 3, characters 7-11:
  Definition is here
File "simple_kinds_class.php", line 19, characters 18-22:
Wrong number of type arguments (expected 2, got 0) (Typing[4101])
  File "simple_kinds_class.php", line 5, characters 7-11:
  Definition is here
File "simple_kinds_class.php", line 13, characters 29-31:
This is a fully-applied type, but a type constructor expecting a single (fully-applied) type argument was expected here. (Typing[4383])
  File "simple_kinds_class.php", line 5, characters 17-18:
  We are expecting a type constructor expecting a single (fully-applied) type argument due to the definition of T2 here.
File "simple_kinds_class.php", line 19, characters 18-22:
This is a type constructor of kind Type -> (Type -> Type) -> Type, but a type constructor expecting a single (fully-applied) type argument was expected here. (Typing[4383])
  File "simple_kinds_class.php", line 5, characters 17-18:
  We are expecting a type constructor expecting a single (fully-applied) type argument due to the definition of T2 here.
